// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/buttons/ViewButtons BulletsViewButton 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
    data-cy="bullets-view-button"
  >
    <img
      alt="Requests"
      class="makeStyles-icon"
      src="request.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Components/buttons/ViewButtons ScriptsViewButton 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
    data-cy="scripts-view-button"
  >
    <img
      alt="Scripts"
      class="makeStyles-icon"
      src="script.svg"
    />
  </div>
</div>
`;
